[package]
name = "call-function"
version = "0.0.1"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.55"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.5"
js-sys = "0.3.32"
wasm-bindgen-futures = "0.4.5"